tests/templatetest/foo/bar/B.java
package foo.bar;

import edu.ucr.cs.riple.taint.ucrtainting.qual.*;

public class B extends A {

  //    // :: error: override.return
  //    public String foo(){
  //        return "B";
  //    }
}
